--- a/data/preprocessed/.gitignore
+++ b/data/preprocessed/.gitignore
@@ -4,3 +4,5 @@
 /fen_white_human.npy
 /fen_black_human.npy.npz
 /fen_white_human.npy.npz
+/fen_black_human_labels.npy.npz
+/fen_white_human_labels.npy.npz
