--- a/data/preprocessed/.gitignore
+++ b/data/preprocessed/.gitignore
@@ -6,3 +6,5 @@
 /fen_white_human.npy.npz
 /fen_black_human_labels.npy.npz
 /fen_white_human_labels.npy.npz
+/fen_black_human_attacks.npy.npz
+/fen_white_human_attacks.npy.npz
