introduced config file; started building eval pipeline

--- a/data/preprocessed/.gitignore
+++ b/data/preprocessed/.gitignore
@@ -8,3 +8,7 @@
 /fen_white_human_labels.npy.npz
 /fen_black_human_attacks.npy.npz
 /fen_white_human_attacks.npy.npz
+/eval.parquet
+/fen_eval_attacks.npy.npz
+/fen_eval_labels.npy.npz
+/fen_eval.npy.npz
